gcc/testsuite/rust/rustc/ui/lifetimes/issue-83753-invalid-associated-type-supertrait-hrtb.rs
//@ check-fail

struct Foo {}
impl Foo {
    fn bar(foo: Foo<Target = usize>) {}
// { dg-error ".E0229." "" { target *-*-* } .-1 }
}
fn main() {}

